tests/NormalTests/paczka2/big_fuzzy/43493824.err
Error in line 2: oxVs S759 41,6
Error in line 10: clVc S817 39,8
Error in line 14: clVc A732 37,7
Error in line 12: FZCRbusSKj S108 74,3
Error in line 19: clVc S817 16,7
Error in line 25: wuO1CI S759 44,9
Error in line 32: oxVs S108 27,8
Error in line 35: oxVs S817 58,4
Error in line 38: S817 S817 75,3
Error in line 42: ydw8yGa4Lx S759 2,58
Error in line 51: oxVs S108 7,2
Error in line 47: ydw8yGa4Lx S817 77,6
Error in line 59: S817 S759 59,1
Error in line 68: wuO1CI S108 77,2
Error in line 78: wuO1CI S817 24,0
Error in line 93: FZCRbusSKj S817 33,8
Error in line 86: wuO1CI S759 92,5
Error in line 98: clVc S108 61,7
Error in line 109: FZCRbusSKj S759 74,9
Error in line 110: FZCRbusSKj A732 18,1
Error in line 139: wuO1CI A732 52,4
Error in line 143: wuO1CI S817 57,3
Error in line 151: wuO1CI S759 -5,3
Error in line 148: FZCRbusSKj S759 84,1
Error in line 149: VGTS A732 20,4
Error in line 142: S817 S108 42,8
Error in line 156: oxVs A732 68,9
Error in line 165: wuO1CI S81 30,5
Error in line 166: wuO1CI S817 108,6
Error in line 173: wuO1CI A732 99,6
Error in line 185: S817 S759 61,3
Error in line 186: oxVs S759 193,7
Error in line 187: S817 S108 85,7
Error in line 195: VGTSS817300,4
Error in line 200: wuO1CI S817 -1,4
Error in line 201: oxVs A732 48,8
Error in line 183: clVc S108 0,3
Error in line 208: ydw8yGa4Lx S759 35,0
Error in line 212: clVc A732 28,9
Error in line 204: FZCRbusSKj S108 101,3
Error in line 226: S817 S817 11,3
Error in line 229: ydw8yGa4Lx S817 96,2
Error in line 221: wuO1CI S817 2,8
Error in line 230: clVc S759 96,5
Error in line 238: clVc S817 5,4
Error in line 245: wuO1CI S759 -1,4
Error in line 246: FZCRbusSKj S759 274,6
